fixing font issues and some c9 grid alignments for 2020 gutenberg

--- a/assets/styles/custom-editor-style.scss
+++ b/assets/styles/custom-editor-style.scss
@@ -355,6 +355,7 @@ h6,
     font-family: $headings-font-family;
 }
 
+.editor-styles-wrapper .editor-block-list__layout h1,
 .editor-styles-wrapper h1,
 .editor-styles-wrapper .h1,
 .wp-block-heading h1,
@@ -371,30 +372,35 @@ h6,
     font-family: $headings-font-family;
 }
 
+.editor-styles-wrapper .editor-block-list__layout h2,
 .editor-styles-wrapper h2,
 .editor-styles-wrapper .h2,
 .wp-block-heading h2 {
     font-size: 3.6rem
 }
 
+.editor-styles-wrapper .editor-block-list__layout h3,
 .editor-styles-wrapper h3,
 .editor-styles-wrapper .h3,
 .wp-block-heading h3 {
     font-size: 3rem
 }
 
+.editor-styles-wrapper .editor-block-list__layout h4,
 .editor-styles-wrapper h4,
 .editor-styles-wrapper .h4,
 .wp-block-heading h4 {
     font-size: 2.8rem
 }
 
+.editor-styles-wrapper .editor-block-list__layout h5,
 .editor-styles-wrapper h5,
 .editor-styles-wrapper .h5,
 .wp-block-heading h5 {
     font-size: 2rem
 }
 
+.editor-styles-wrapper .editor-block-list__layout h6,
 .editor-styles-wrapper h6,
 .editor-styles-wrapper .h6,
 .wp-block-heading h6 {
